paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:48:14
   |
48 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:13:33
   |
13 |                 backing[i][j] = (i + 1) * 100 + (j + 1);
   |                 -------------   ^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`
   |                 |
   |                 expected due to the type of this binding

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:38:37
   |
38 |                 q[i][j] = c[i][j] + d[(i + j) % 9];
   |                                     ^^^^^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:38:35
   |
38 |                 q[i][j] = c[i][j] + d[(i + j) % 9];
   |                                   ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:58:10
   |
58 |     fvla(&x);
   |     ---- ^^ expected `&[[i32; 9]; 9]`, found `&[[usize; 9]; 9]`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[[i32; 9]; 9]`
              found reference `&[[usize; 9]; 9]`
note: function defined here
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:29:4
   |
29 | fn fvla(c: &[[i32; 9]; 9]) {
   |    ^^^^ -----------------

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:66:39
   |
66 |     let expect_checksum = checksum_2d(&expect);
   |                           ----------- ^^^^^^^ expected `&[[i32; 9]; 9]`, found `&[[usize; 9]; 9]`
   |                           |
   |                           arguments to this function are incorrect
   |
   = note: expected reference `&[[i32; 9]; 9]`
              found reference `&[[usize; 9]; 9]`
note: function defined here
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:19:4
   |
19 | fn checksum_2d(a: &[[i32; 9]; 9]) -> i32 {
   |    ^^^^^^^^^^^ -----------------

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:71:10
   |
71 |     fvla(&y);
   |     ---- ^^ expected `&[[i32; 9]; 9]`, found `&[[usize; 9]; 9]`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[[i32; 9]; 9]`
              found reference `&[[usize; 9]; 9]`
note: function defined here
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:29:4
   |
29 | fn fvla(c: &[[i32; 9]; 9]) {
   |    ^^^^ -----------------

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:79:40
   |
79 |     let expect2_checksum = checksum_2d(&expect2);
   |                            ----------- ^^^^^^^^ expected `&[[i32; 9]; 9]`, found `&[[usize; 9]; 9]`
   |                            |
   |                            arguments to this function are incorrect
   |
   = note: expected reference `&[[i32; 9]; 9]`
              found reference `&[[usize; 9]; 9]`
note: function defined here
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_004/target.rs:19:4
   |
19 | fn checksum_2d(a: &[[i32; 9]; 9]) -> i32 {
   |    ^^^^^^^^^^^ -----------------

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.